# Intelligent_Greenhouse

./: .gitignore  Greenhouse.code-workspace  README.md
Src/: ProPrj_STM32f407_yhy_2026-05-14.epro2
Src/ESP32S3_Arduino/: .gitignore  platformio.ini
Src/ESP32S3_Arduino/examples/: deepseek_api_example.cpp
Src/ESP32S3_Arduino/src/BSP/Os_Service/: os_service.cpp
Src/ESP32S3_Arduino/src/Config/: global_config.h  secrets.h
Src/ESP32S3_Arduino/src/ECUAL/INMP441/: inmp441_driver.cpp
Src/ESP32S3_Arduino/src/ECUAL/MAX98357AETE/: max98357a_driver.h
Src/ESP32S3_Arduino/src/MCAL/: i2s_hal.cpp
Src/ESP32S3_Arduino/src/MCAL/NetworkAbstraction/: wifi_hal.cpp
Src/ESP32S3_Arduino/src/Service/CanNetworkService/: can_network_service.cpp
Src/ESP32S3_Arduino/src/Service/DeepSeekAPI/: deepseek_api.h
Src/ESP32S3_Arduino/src/Service/Protocol/CAN/: can_protocol.cpp  can_protocol.h
Src/ESP32S3_Arduino/src/Service/Protocol/NetworkService/: http_client.cpp
Src/ESP32S3_Arduino/src/Service/Utils/: utils.cpp  utils.h
Src/ESP32S3_Arduino/src/Service/VoiceAssistant/: voice_assistant_service.h
Src/ESP32S3_Arduino/test/test_python/: audio_identification.py
Src/Esp32_Interaction/: .gitignore  build_middleware.py  platformio.ini
Src/Esp32_Interaction/examples/: can_network_service_example.cpp  can_protocol_example.cpp  deepseek_api_example.cpp  led_service_example.cpp  sensor_state_example.cpp
Src/Esp32_Interaction/src/: main.cpp
Src/Esp32_Interaction/src/App/CAN/: can_app.cpp  can_app.h
Src/Esp32_Interaction/src/App/LVGL/: lvgl_app.cpp  lvgl_app.h
Src/Esp32_Interaction/src/BSP/Os_Service/: os_service.h
Src/Esp32_Interaction/src/Config/: app_config.h  board_config.h  deepseek_runtime_config.h  global_config.h  lv_conf.h  secrets_temp.h  wifi_core_types.h
Src/Esp32_Interaction/src/ECUAL/Display/: display_hal.cpp  display_hal.h
Src/Esp32_Interaction/src/ECUAL/INMP441/: inmp441_driver.h
Src/Esp32_Interaction/src/ECUAL/MAX98357AETE/: max98357a_driver.cpp  max98357a_driver.h
Src/Esp32_Interaction/src/MCAL/: i2s_hal.h
Src/Esp32_Interaction/src/MCAL/I2S/: i2s_hal.cpp  i2s_hal.h
Src/Esp32_Interaction/src/MCAL/NetworkAbstraction/: wifi_hal.cpp  wifi_hal.h
Src/Esp32_Interaction/src/Service/BaiduApi/: baidu_api.cpp  baidu_api.h
Src/Esp32_Interaction/src/Service/CanNetworkService/: can_network_service.h
Src/Esp32_Interaction/src/Service/CanService/CAN/: can_protocol.c  can_protocol.h
Src/Esp32_Interaction/src/Service/CanService/CanNetworkService/: can_network_service.c  can_network_service.h
Src/Esp32_Interaction/src/Service/DeepSeekAPI/: deepseek_api.cpp  deepseek_api.h
Src/Esp32_Interaction/src/Service/GUI/: gui_manager.cpp  gui_manager.h
Src/Esp32_Interaction/src/Service/GUI/SmartGreenhouse/custom/: custom.c  custom.h
Src/Esp32_Interaction/src/Service/GUI/custom/: custom.c  custom.h
Src/Esp32_Interaction/src/Service/LedService/: led_service.cpp  led_service.h
Src/Esp32_Interaction/src/Service/NetworkService/: http_client.cpp
Src/Esp32_Interaction/src/Service/Protocol/CAN/: internal_can_protocol.h
Src/Esp32_Interaction/src/Service/Protocol/NetworkService/: http_client.h
Src/Esp32_Interaction/src/Service/SensorState/: sensor_state.c  sensor_state.cpp  sensor_state.h
Src/Esp32_Interaction/src/Service/VoiceAssistant/: voice_assistant_bridge.cpp  voice_assistant_bridge.h  voice_assistant_service.cpp  voice_assistant_service.h
Src/Esp32_Interaction/src/Service/WifiService/: wifi_service.cpp  wifi_service.h
Src/Esp32_Interaction/test/TestTimbre/: test_timbre.cpp
Src/Esp32_Interaction/test/TestVoiceAssistant/: voice_assistant.cpp
Src/Esp32_Interaction/test/test_audio/: test_audio.cpp
Src/Esp32_Interaction/test/test_greenhouse/: test_greenhouse.cpp
Src/Esp32_Interaction/test/test_protocol/: test_greenhouse_protocol.cpp
Src/Esp32_Interaction/test/test_python/: audio_identification.py
Src/Stm32_Control/: Cargo.toml
Src/Stm32_Control/.cargo/: config.toml
Src/Stm32_Control/crates/app/: Cargo.toml
Src/Stm32_Control/crates/app/src/: bh1750.rs  led.rs  lib.rs  sht30.rs  ui.rs  ws2812.rs
Src/Stm32_Control/crates/bsw/: Cargo.toml
Src/Stm32_Control/crates/bsw/src/: bh1750.rs  can_proto.rs  led.rs  lib.rs  motor_ctrl.rs  pid.rs  protocol.rs  sht30.rs  ws2812.rs
Src/Stm32_Control/crates/service/: Cargo.toml
Src/Stm32_Control/crates/service/src/: colors.rs  led.rs  lib.rs
Src/Stm32_Control/firmware/: Cargo.toml  build_output.txt
Src/Stm32_Control/firmware/.cargo/: config.toml
Src/Stm32_Control/firmware/examples/: blinky.rs  oled_i2c.rs  sht30_i2c.rs
