[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
# 引用本地的 service
service = { path = "../service" }

# 通用依赖
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embassy-stm32 = { workspace = true }

embedded-hal = { workspace = true }

embedded-graphics = { workspace = true }

defmt = { workspace = true }
ssd1306 = { workspace = true }
display-interface = { workspace = true }
heapless = { workspace = true }
num-traits = { workspace = true }

smart-leds = { workspace = true }
smart-leds-trait = { workspace = true }
bsw = { path = "../bsw" }